v.1.25.0 ログインエラー時の例外処理追加のためAPIを変更。フロント側対応必要。
